--- a/projects/qybm-inc/css/styles.css
+++ b/projects/qybm-inc/css/styles.css
@@ -275,14 +275,10 @@ body .main-content{ background: #f2f2f2; }
 }
 
 .app{position: relative;}
-.app .section-bg img{
-	width: 100%;height: auto;
-}
+.app .section-bg img{ width: 100%;height: auto; }
 .app .content{
-	position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
+    width: 500px; height: 500px;
+	position: absolute; top: 50%; left: 50%; margin-left: -250px; margin-top: -400px; 
 }
 #app4 .circle .ringItem{
 	background: none;
@@ -379,43 +375,42 @@ ul.case-list{padding: 30px; text-align: center; margin-top: 20px;}
 }
 
 
-.contactus{
-	padding: 35px 0 25px;
+.location{ 
+    background-color: #F6C81D; padding: 0 0 60px; 
+    background: url(../image/contact/contactus-1.jpg);
+    background-size: cover;
 }
-
-.location{
-	background-color: #F6C81D;
-	padding: 35px 0;
-}
+.location h2{ padding: 50px 0; color:#fff; text-align: center;  }
 .location .map-container{
 	width: 750px;
     height: 400px;
     margin: 0 auto;
-    border: 3px solid #FFE36F;
+    border: 4px solid rgba(255,2555, 255, 0.75);
     border-radius: 5px;
 }
 #baidumap{width:100%;height:400px;}
 
-footer{background: #2b291f;
-    padding: 30px;}
-footer .container{width: 750px; margin:0 auto;font-size:0;}
-footer .container > .logo{
-	width: 120px;
-    line-height: 120px;
-    display: inline-block;
-    vertical-align: top;
+footer{background: #282828;padding:50px 30px 40px;}
+footer .container{width: 1000px; margin:0 auto;}
+footer .logo{ margin: 0 auto; text-align: center; }
+footer ul.contact-info{
+    width: 500px; margin: 0 auto; padding-top: 50px;
 }
-footer .container > .logo img{ width: 100%; }
-footer .container > ul.contact-info{
-	display: inline-block;
-    width: 630px;
+footer ul.contact-info li{
+	line-height: 25px;
     font-size: 14px;
-    padding-left: 20px;
-    box-sizing: border-box;
+    color: #696969;
 }
-footer .container > ul.contact-info li{
-	line-height: 36px;
-    font-size: 18px;
-    font-weight: bold;
-    color: #ccc;
+footer .copyright{padding-top: 50px;}
+footer .copyright p{
+    font-size: 14px;
+    color: #fff;
+    text-align: center;
 }
+footer .links{ font-size: 0; width: 400px; margin: 0 auto; padding-top: 30px; }
+footer .links li{
+    display: inline-block; padding:0 20px;
+    font-size: 14px; color:#fff;
+    border-left: 1px solid #fff;
+}
+footer .links li:first-child{ border:none; }
