--- a/projects/qybm-inc/css/styles.css
+++ b/projects/qybm-inc/css/styles.css
@@ -315,14 +315,16 @@ body .main-content{ background: #f2f2f2; }
 }
 
 
-.cases{position: relative;}
-.cases .content{
-	position: absolute;overflow: hidden;
-    top: 0;
-    width: 100%;
-    height: 100%;
+.cases{
+    position: relative;height:660px;
+    background-image: url(../image/case-bg.png);
+    background-size: cover; 
+    overflow: hidden;
 }
-ul.case-list{padding: 30px; text-align: center; margin-top: 20px;}
+.cases .content{ 
+
+}
+ul.case-list{padding: 50px; text-align: center; margin-top: 20px;}
 .case-list li{    
 	display: inline-block; position: relative; cursor: pointer;
     width: 70px; transition: all 0.2s ease-out; line-height: 90px;
