--- a/projects/yueba/css/main.css
+++ b/projects/yueba/css/main.css
@@ -1,4 +1,4 @@
-body > .shareImg{position: absolute;z-index: 0;}
+body > .shareImg{position: absolute;z-index: -1;opacity: 0 !important; }
 /*.btn-next-step{transform:translateX(131px) translateY(331px) rotateY(0deg)!important;}*/
 
 /* scene 0 */
