--- a/homepage/css/app.css
+++ b/homepage/css/app.css
@@ -1,9 +1,17 @@
+/*global*/
+body{font-family:'Montserrat', sans-serif, Arail;line-height: 1.42857143;color: #333;}
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
 /*layout*/
 html{position: relative;min-height: 100%;}
 body{margin-bottom: 60px;}
-header{font-family:ubuntu, sans-serif, Arail;}
+header{}
 footer{height: 60px;width: 100%;position: absolute;bottom: 0;padding: 10px;box-sizing: border-box;}
-
 
 /*app style*/
 body{background: url(../img/big-one.jpg);}
@@ -12,4 +20,6 @@ body{background: url(../img/big-one.jpg);}
 /*body*/
 #body{padding-top:38px;}
 .main-menu{ position: absolute; width: 15%; left: 15%; padding-right: 10px;}
-.home-card{ position: absolute; width: 40%; left: 30%; }
+.home-card{ position: absolute; width: 40%; left: 30%; border-top: 6px solid darkslategray;padding:20px;}
+.home-card .xui-card-avatar{margin-top: 20px;}
+.home-card h1, .home-card h2{font-family: 'Ubuntu';}
