--- a/homepage/css/xui.css
+++ b/homepage/css/xui.css
@@ -10,12 +10,17 @@
     .xui-container{ width:1170px; }
 }
 
+.accent-color{color:rebeccapurple;}
+
 .xui-menu{box-sizing: border-box;}
 .xui-menu-list li{ background: rebeccapurple; margin-bottom:5px; }
 .xui-menu-list a{
     padding: 10px;
     display: block;
     color: #fff;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 12px;
     text-decoration: none;
 }
 
@@ -26,8 +31,22 @@
     border-radius: 50%;
     overflow: hidden;
     border: 6px solid #ddd;
-    margin: 0 auto;
+    margin: 20px auto;
+    box-sizing: border-box;
 }
 .xui-card-avatar img{
     width:100%;
+}
+.xui-card-desc .main-title{
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    color: #333;
+    margin-bottom:8px;
+}
+.xui-card-desc .sub-title{
+    font-weight: bold;
+    color: #333;
+    text-align: center;
+    line-height: 1.5;
 }
