--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -20,6 +20,6 @@ body{background: url(../img/big-one.jpg);}
 /*body*/
 #body{padding-top:38px;}
 .main-menu{ position: absolute; width: 15%; left: 15%; padding-right: 10px;}
-.home-card{ position: absolute; width: 40%; left: 30%; border-top: 6px solid darkslategray;padding:20px;}
+.home-card{ position: absolute; width: 40%; left: 30%; border-top: 6px solid darkslategray;}
 .home-card .xui-card-avatar{margin-top: 20px;}
 .home-card h1, .home-card h2{font-family: 'Ubuntu';}
