--- a/homepage/assets/css/xui.css
+++ b/homepage/assets/css/xui.css
@@ -14,6 +14,9 @@
 
 .xui-menu{
     box-sizing: border-box;
+    -webkit-transition: all 0.6s ease-in-out;
+    -moz-transition: all 0.6s ease-in-out;
+    transition: all 0.6s ease-in-out;
 }
 .xui-menu-list li{ 
     background: chocolate; 
@@ -59,6 +62,10 @@
 .xui-card{
     background:#efefef;
     padding:20px 50px;
+    border-top: 6px solid darkslategray;
+    -webkit-transition: all 0.6s ease-in-out;
+    -moz-transition: all 0.6s ease-in-out;
+    transition: all 0.6s ease-in-out;
 }
 .xui-card-avatar{
     width: 200px;
@@ -78,6 +85,7 @@
     text-align: center;
     color: #333;
     margin-bottom:8px;
+    font-family: 'Ubuntu';
 }
 .xui-card-desc .sub-title{
     font-weight: bold;
@@ -85,6 +93,7 @@
     text-align: center;
     line-height: 1.5;
     margin-bottom: 8px;
+    font-family: 'Ubuntu';
 }
 .xui-card-desc hr{
     border: none;
@@ -125,4 +134,9 @@
 }
 .xui-card-footer .social-btns a:hover{
     background: chocolate;
+}
+
+
+.list-view-card li img{
+    width: 100%;
 }
