--- a/homepage/assets/css/app.css
+++ b/homepage/assets/css/app.css
@@ -14,12 +14,17 @@ header{}
 footer{height: 60px;width: 100%;position: absolute;bottom: 0;padding: 10px;box-sizing: border-box;}
 
 /*app style*/
-body{background: url(../img/big-one.jpg);}
+body{background: url(../img/big-one-v2.jpg);}
 
 
 /*body*/
 #body{padding-top:38px;}
-.main-menu{ position: absolute; width: 15%; left: 15%; padding-right: 10px;}
-.home-card{ position: absolute; width: 40%; left: 30%; border-top: 6px solid darkslategray;}
-.home-card .xui-card-avatar{margin-top: 20px;}
-.home-card h1, .home-card h2{font-family: 'Ubuntu';}
+#main-menu{ position: absolute; width: 15%; left: 15%; padding-right: 10px;}
+
+.xui-card{ position: absolute; width: 40%; left: 30%; z-index: 10; opacity: 0; }
+#home-card{  z-index: 99; opacity: 1; }
+.xui-card[active-page='true']{ z-index: 20; opacity: 1; }
+
+.wide-view #main-menu{ left: 0%; }
+.wide-view #home-card{ left: 15%; }
+.wide-view .xui-card[active-page='true']{ left: 55%; margin-left: 10px; }
