--- a/homepage/assets/css/xui.css
+++ b/homepage/assets/css/xui.css
@@ -65,7 +65,7 @@
 
 .xui-card{
     background: rgba(239, 239, 239, .9);
-    padding:20px 50px;
+    padding:35px 45px 20px;
     border-top: 6px solid darkslategray;
     -webkit-transition: all 0.6s ease-in-out;
     -moz-transition: all 0.6s ease-in-out;
@@ -141,13 +141,78 @@
 }
 
 
-.card-title h2{
+.card-title{
     font-size: 22px;
     font-weight: bold;
     text-transform: uppercase;
     border-bottom: 1px solid #333;
+    margin-bottom: 30px;
+    padding-bottom: 10px;
+}
+.card-sub-title{
+    font-size: 14px;
+    font-weight: bold;
+    border-bottom: 1px dotted #333;
+    line-height: 28px;
 }
 
 .list-view-card li img{
     width: 100%;
 }
+
+
+.xui-progress{
+    position: relative;
+    margin-bottom: 15px;
+    background: #f5f5f5;
+    border-radius: 4px;
+    overflow: hidden;
+    height:25px;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+}
+.xui-progress .xui-progress-bar{
+    float:left;
+    height: 100%;
+    background: chocolate;
+    box-shadow: inset 0 -1px 2px rgba(0,0,0,0.15);
+}
+.xui-progress .xui-progress-label{
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    color: #fff;
+    font-size: 12px;
+    line-height: 22px;
+    text-indent: 1.5em;
+}
+.xui-progress .xui-progress-completed{
+    position:absolute;
+    right:8px;
+    font-size:14px;
+    font-weight:bold;
+    line-height:22px;
+    color:#999;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
