--- a/assets/css/xui.css
+++ b/assets/css/xui.css
@@ -10,10 +10,23 @@
     .xui-container{ width:1170px; }
 }
 
+/*button*/
+.xui-btn{
+    padding: 6px 12px;
+    text-align: center;
+    white-space: nowrap;
+    display: inline-block;
+    border: none;
+    font-weight: normal;
+}
+
 .accent-color{color: chocolate;}
 
 .xui-menu{
     box-sizing: border-box;
+    -webkit-transition: all 0.6s ease-in-out;
+    -moz-transition: all 0.6s ease-in-out;
+    transition: all 0.6s ease-in-out;
 }
 .xui-menu-list li{ 
     background: chocolate; 
@@ -54,11 +67,24 @@
 .xui-menu-item a:hover:before{
     width: 100%;
 }
+.xui-menu-list li.menu-active a{
+    background: darkslategrey;
+    padding-left: 20px;
+}
 
 
 .xui-card{
-    background:#efefef;
-    padding:20px 50px;
+    background: rgba(239, 239, 239, .9);
+    padding:35px 45px 20px;
+    border-top: 6px solid darkslategray;
+    -webkit-transition: all 0.6s ease-in-out;
+    -moz-transition: all 0.6s ease-in-out;
+    transition: all 0.6s ease-in-out;
+    height: 570px;
+    overflow-y: auto;
+}
+.xui-card img{
+    max-width:100%;
 }
 .xui-card-avatar{
     width: 200px;
@@ -78,6 +104,7 @@
     text-align: center;
     color: #333;
     margin-bottom:8px;
+    font-family: 'Ubuntu';
 }
 .xui-card-desc .sub-title{
     font-weight: bold;
@@ -85,6 +112,7 @@
     text-align: center;
     line-height: 1.5;
     margin-bottom: 8px;
+    font-family: 'Ubuntu';
 }
 .xui-card-desc hr{
     border: none;
@@ -126,3 +154,100 @@
 .xui-card-footer .social-btns a:hover{
     background: chocolate;
 }
+
+
+.card-title{
+    font-size: 22px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-bottom: 1px solid #333;
+    margin-bottom: 30px;
+    padding-bottom: 10px;
+}
+.card-sub-title{
+    font-size: 14px;
+    font-weight: bold;
+    border-bottom: 1px dotted #333;
+    line-height: 28px;
+    margin: 20px 0 12px;
+}
+
+.list-view-card li img{
+    width: 100%;
+}
+
+
+.xui-progress{
+    position: relative;
+    margin-bottom: 15px;
+    background: #f5f5f5;
+    border-radius: 4px;
+    overflow: hidden;
+    height:25px;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+}
+.xui-progress .xui-progress-bar{
+    float:left;
+    height: 100%;
+    background: chocolate;
+    box-shadow: inset 0 -1px 2px rgba(0,0,0,0.15);
+}
+.xui-progress .xui-progress-label{
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    color: #fff;
+    font-size: 12px;
+    line-height: 25px;
+    text-indent: 1.5em;
+}
+.xui-progress .xui-progress-completed{
+    position:absolute;
+    right:8px;
+    font-size:14px;
+    font-weight:bold;
+    line-height:25px;
+    color:#999;
+}
+
+
+
+
+/*form*/
+.xui-form .form-group{
+    margin-bottom: 10px;   
+}
+.xui-form .form-control{
+    display: block;
+    width: 100%;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.5;
+    background:#fff;
+    color: #555;
+}
+.xui-form .submit-btn{
+    width: 100%;
+    background: chocolate;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 10px 12px;
+    font-family: Montserrat, sans-serif;
+    font-weight: bold;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
