--- a/homepage/assets/css/xui.css
+++ b/homepage/assets/css/xui.css
@@ -10,6 +10,16 @@
     .xui-container{ width:1170px; }
 }
 
+/*button*/
+.xui-btn{
+    padding: 6px 12px;
+    text-align: center;
+    white-space: nowrap;
+    display: inline-block;
+    border: none;
+    font-weight: normal;
+}
+
 .accent-color{color: chocolate;}
 
 .xui-menu{
@@ -159,6 +169,7 @@
     font-weight: bold;
     border-bottom: 1px dotted #333;
     line-height: 28px;
+    margin: 20px 0 12px;
 }
 
 .list-view-card li img{
@@ -205,9 +216,28 @@
 
 
 
-
-
-
+/*form*/
+.xui-form .form-group{
+    margin-bottom: 10px;   
+}
+.xui-form .form-control{
+    display: block;
+    width: 100%;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.5;
+    background:#fff;
+    color: #555;
+}
+.xui-form .submit-btn{
+    width: 100%;
+    background: chocolate;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 10px 12px;
+    font-family: Montserrat, sans-serif;
+    font-weight: bold;
+}
 
 
 
