--- a/assets/css/xui.css
+++ b/assets/css/xui.css
@@ -19,8 +19,21 @@
     border: none;
     font-weight: normal;
 }
+.xui-btn-default{
+    background: chocolate;
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: Montserrat, sans-serif;
+    font-weight: bold;
+    font-size:12px;
+}
+
+
 
 .accent-color{color: chocolate;}
+
+
 
 .xui-menu{
     box-sizing: border-box;
@@ -74,7 +87,7 @@
 
 
 .xui-card{
-    background: rgba(239, 239, 239, .9);
+    background: url(../img/bg-card2.png) repeat-x right top #f4f4f4;
     padding:35px 45px 20px;
     border-top: 6px solid darkslategray;
     -webkit-transition: all 0.6s ease-in-out;
@@ -82,6 +95,9 @@
     transition: all 0.6s ease-in-out;
     height: 570px;
     overflow-y: auto;
+    -webkit-box-shadow: 0px 6px 18px 0px rgba(0, 0, 0, 0.46);
+    -moz-box-shadow: 0px 6px 18px 0px rgba(0, 0, 0, 0.46);
+    box-shadow: 0px 6px 18px 0px rgba(0, 0, 0, 0.46);
 }
 .xui-card img{
     max-width:100%;
@@ -156,12 +172,13 @@
 }
 
 
+/* card title */
 .card-title{
     font-size: 22px;
     font-weight: bold;
     text-transform: uppercase;
     border-bottom: 1px solid #333;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     padding-bottom: 10px;
 }
 .card-sub-title{
@@ -176,7 +193,16 @@
     width: 100%;
 }
 
+.section-title{
+    border-left: 4px solid chocolate;
+    padding-left: 15px;
+    font-size: 16px;
+    font-weight: bold;
+    color: chocolate;
+    margin-bottom: 20px;
+}
 
+/*xui progress*/
 .xui-progress{
     position: relative;
     margin-bottom: 15px;
