--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -33,10 +33,10 @@ body{background: url(../img/bg1.jpg);}
 /*resume*/
 .resume-buttons{margin-bottom:20px;}
 .resume-buttons a{ font-size: 10px;padding:8px 16px; font-weight: normal; }
-.resume-item{padding:15px;border: 4px double #ccc;}
+.resume-item{padding:15px;border: 4px double #ccc;margin-bottom:15px;}
 .resume-item .title{font-weight: bold;font-size: 18px;color:#333;}
 .resume-item .sub-title{ font-size: 11px; font-style: italic; border-bottom: 1px solid #ccc;padding-bottom:5px; line-height: 20px; }
-.resume-item .description{ padding:5px; }
+.resume-item .description{ padding:5px;font-size: 12px; }
 
 /*skills*/
 .skill-list{margin-top:20px;}
