--- a/20181015/src/App.css
+++ b/20181015/src/App.css
@@ -1,32 +1,40 @@
-.App {
-  text-align: center;
+/*global*/
+body{font-family:'Montserrat', sans-serif, Arail;line-height: 1.42857143;color: #333;}
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
+/*layout*/
+html{position: relative;min-height: 100%;}
+body{margin-bottom: 60px;}
+header{}
+footer{height: 60px;width: 100%;position: absolute;bottom: 0;padding: 10px;box-sizing: border-box;}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+/*app style*/
+body{background: url(./img/bg1.jpg);}
 
-.App-link {
-  color: #61dafb;
-}
+/*body*/
+#body{padding-top:38px;}
+#main-menu{ position: absolute; width: 15%; left: 15%; padding-right: 10px;}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.xui-card{ position: absolute; width: 40%; left: 30%; z-index: 10; opacity: 0; }
+#home-card{  z-index: 99; opacity: 1; }
+.xui-card[active-page='true']{ z-index: 20; opacity: 1; }
+
+.wide-view #main-menu{ left: 0%; }
+.wide-view #home-card{ left: 15%; }
+.wide-view .xui-card[active-page='true']{ left: 55%; margin-left: 10px; }
+
+
+/*resume*/
+.resume-buttons{margin-bottom:20px;}
+.resume-buttons a{ font-size: 10px;padding:8px 16px; font-weight: normal; }
+.resume-item{padding:15px;border: 4px double #ccc;margin-bottom:15px;}
+.resume-item .title{font-weight: bold;font-size: 18px;color:#333;}
+.resume-item .sub-title{ font-size: 11px; font-style: italic; border-bottom: 1px solid #ccc;padding-bottom:5px; line-height: 20px; }
+.resume-item .description{ padding:5px;font-size: 12px; }
+
+/*skills*/
+.skill-list{margin-top:20px;}
