Adjust the structure

--- a/20181015/src/pages/home/Home.css
+++ b/20181015/src/pages/home/Home.css
@@ -13,10 +13,10 @@ header{}
 footer{height: 60px;width: 100%;position: absolute;bottom: 0;padding: 10px;box-sizing: border-box;}
 
 /*app style*/
-body{background: url(./img/bg1.jpg);}
+body{background: url(../../img/bg1.jpg);}
 
 /*body*/
-#body{padding-top:38px;}
+body{padding-top:38px;}
 #main-menu{ position: absolute; width: 15%; left: 15%; padding-right: 10px;}
 
 .xui-card{ position: absolute; width: 40%; left: 30%; z-index: 10; opacity: 0; }
