--- a/20181015/src/Xui.css
+++ b/20181015/src/Xui.css
@@ -1,4 +1,5 @@
 
+/*container*/
 .xui-container{ margin-left: auto; margin-right: auto; position: relative; }
 @media (min-width: 768px){
     .xui-container{ width:750px; }
@@ -29,12 +30,10 @@
     font-size:12px;
 }
 
-
-
+/*colors*/
 .accent-color{color: chocolate;}
 
-
-
+/*menu*/
 .xui-menu{
     box-sizing: border-box;
     -webkit-transition: all 0.6s ease-in-out;
@@ -85,7 +84,9 @@
     padding-left: 20px;
 }
 
-
+/**
+ * Card
+ */
 .xui-card{
     background: url(img/bg-card2.png) repeat-x right top #f4f4f4;
     padding:35px 45px 20px;
