--- a/20181015/src/pages/YiKaTong/components/ResultPanel/index.scss
+++ b/20181015/src/pages/YiKaTong/components/ResultPanel/index.scss
@@ -1,13 +1,19 @@
+$row_alternative_color: #e3e3e3;
+$areaname_alternative_color: #f44336;
 .result-panel{
     .area_name{
         vertical-align:middle;
-        &.old{
-            background-color: #cfcfcf;
+        &.odd{
+            background-color: $areaname_alternative_color;
+            color: #fff;
+            &:hover{
+                color: rgba(0, 0, 0, .65)
+            }
         }
     }
     table{
         tr:nth-child(2n){
-            background-color: #cfcfcf;
+            background-color: $row_alternative_color;
         }
     }
 }
