--- a/20181015/src/pages/YiKaTong/components/FilterBox/index.scss
+++ b/20181015/src/pages/YiKaTong/components/FilterBox/index.scss
@@ -1,5 +1,14 @@
 .filter-box{
-    width:80%;
-    min-width: 800px;
-    margin: 0 auto 35px;
+    position: relative;
+    height: 100%;
+
+    .filter-box-body{
+        height: 100%;
+        padding-bottom: 50px;
+    }
+    .filter-box-footer{
+        position: absolute;
+        bottom: 0;
+        height: 50px;
+    }
 }
