--- a/20181015/src/pages/YiKaTong/components/FilterBox/index.scss
+++ b/20181015/src/pages/YiKaTong/components/FilterBox/index.scss
@@ -11,4 +11,17 @@
         bottom: 0;
         height: 50px;
     }
+
+    .filter-group{
+        margin-bottom: 35px;
+        
+        .filter-group-title{
+            font-weight: bold;
+            line-height: 30px;
+            font-size: 15px;
+            margin-bottom: 10px;
+        }
+    }
 }
+
+
