--- a/20181015/src/pages/YiKaTong/components/FilterBox/index.scss
+++ b/20181015/src/pages/YiKaTong/components/FilterBox/index.scss
@@ -21,6 +21,11 @@
             font-size: 15px;
             margin-bottom: 10px;
         }
+
+
+        .ant-checkbox-group-item{
+            width: 110px;
+        }
     }
 }
 
