--- a/20181015/src/pages/YiKaTong/index.scss
+++ b/20181015/src/pages/YiKaTong/index.scss
@@ -3,8 +3,11 @@
     background-size: 100%;
     background-position: top;
     background-attachment: fixed;
+
     .ant-layout-header, .ant-layout-footer{
-        background: rgba(0,0,0, .5);
+        background: #fff;
+        padding: 0 15px;
+        
         h1{
             color: white;
         }
@@ -27,11 +30,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 10px;
     }
+
     .main-card{
-        width:60%;
-        min-width: 600px;
-        margin: 35px auto 35px;
+        width:100%;
+        margin: 0;
     }
 }
 .main-cardant-drawer-content-wrapper{
@@ -40,4 +44,27 @@
 
 .ant-drawer-body{
     height: 100%;
+}
+
+
+.hidden-sm{display: none;}
+.hidden-md{display: block;}
+
+@media all and (min-width: 768px){
+    .hidden-sm{display: block;}
+    .hidden-md{display: none;}      
+
+    .layout-yikatong{
+        background-size: cover;
+        .ant-layout-header{
+            padding: 0 35px;
+            // background: rgba(0,0,0, .5);
+        }
+
+        .main-card{
+            width:60%;
+            min-width: 720px;
+            margin: 35px auto 35px;
+        }
+    }
 }
