--- a/chunni/src/css/app.css
+++ b/chunni/src/css/app.css
@@ -34,10 +34,37 @@ body{
     font-size: 12px;
 }
 
+.container{
+    margin-top: 20px;
+    padding: 1px;
+}
 
 
-
-
+.section-header{
+    font-family: '微软雅黑';
+    font-weight: normal;
+    font-size: 22px;
+    letter-spacing: 3px;
+    text-align: center;
+    margin: 20px 20px 35px;
+}
+.link-lists{
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+}
+.link-lists .link-item{
+    flex: 0 20%;
+    text-align: center;
+}
+.link-lists .link-item a{
+    padding: 20px 35px;
+    color: lightgreen;
+    text-decoration: none;
+}
+.link-lists .link-item:hover a{
+    border: 1px solid lightgreen;
+}
 
 
 
