--- a/chunni/src/css/app.css
+++ b/chunni/src/css/app.css
@@ -2,11 +2,14 @@ body{
     background-color: #009966;
     color: #fff;
 }
+header, main{
+    padding-top: 20px;
+}
+
 .container{
     max-width: 1080px;
     margin: 0 auto;
 }
-
 .page-header{
     color: #fefefe;;;
     padding: 10px 25px;
@@ -34,11 +37,6 @@ body{
     font-size: 12px;
 }
 
-.container{
-    margin-top: 20px;
-    padding: 1px;
-}
-
 
 .section-header{
     font-family: '微软雅黑';
@@ -50,30 +48,26 @@ body{
 }
 .link-lists{
     padding: 10px;
-    display: flex;
-    justify-content: center;
+    text-align: center;
 }
 .link-lists .link-item{
-    flex: 0 20%;
-    text-align: center;
+    display: inline-block;
+    padding: 15px 30px;
 }
 .link-lists .link-item a{
     padding: 20px 35px;
-    color: lightgreen;
+    color: #c6f5c6;
     text-decoration: none;
 }
-.link-lists .link-item:hover a{
-    border: 1px solid lightgreen;
-}
-
-
-
-
-
-footer{
-    text-align: center;
-}
-footer a{
+.link-lists .link-item a:hover{
     color: #fff;
+}
+
+
+
+footer .copyright{
+    color: #fff;
+    text-align: center;
     text-decoration: none;
+    font-size: 12px;
 }
