--- a/app/src/pages/Resume/components/Head/index.less
+++ b/app/src/pages/Resume/components/Head/index.less
@@ -1,6 +1,9 @@
 .resume-header{
     background: #A5A5A5;
     display: flex;
+    align-items: center;
+    margin-bottom: 24px;
+    
     .avatar{
         width: 200px;
         height: 200px;
@@ -27,7 +30,7 @@
     }
 
     .meta-info{
-        width: 200;
+        width: 250px;
 
         li{
             line-height: 32px;
