--- a/app/src/pages/Resume/components/Head/index.less
+++ b/app/src/pages/Resume/components/Head/index.less
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 24px;
+    padding: 0 32px;
     
     .avatar{
         width: 200px;
@@ -36,6 +37,11 @@
             line-height: 32px;
             height: 32px;
             margin-bottom: 8px;
+
+            i.iconfont{
+                font-size: 22px;
+                margin-right: 8px;
+            }
         }
     }
 }
