--- a/app/src/pages/Resume/components/Section/index.less
+++ b/app/src/pages/Resume/components/Section/index.less
@@ -1,11 +1,12 @@
 .resume-section{
-    margin: 0 48px;
+    margin: 0 48px 12px;
 
     .section-header{
         h2{
             display: flex;
             align-items: center;
             height: 32px;
+            font-weight: bold;
         }
         .icon{
             width: 24px;
