--- a/app/src/pages/Resume/index.less
+++ b/app/src/pages/Resume/index.less
@@ -6,3 +6,16 @@ body{
     margin: 0 auto;
     background: #fff;
 }
+.breif-desc{
+    margin-bottom: 24px;
+    .section-content{
+        border-bottom: 1px solid #ccc;
+    }
+}
+.icomments{
+    ol{
+        padding-left: 12px;
+        line-height: 32px;
+        margin-bottom: 24px;
+    }
+}
