--- a/app/src/pages/Resume/components/Head/index.less
+++ b/app/src/pages/Resume/components/Head/index.less
@@ -1,5 +1,6 @@
 .resume-header{
-    background: #A5A5A5;
+    background-color: #343A4B;
+    color: #fff;
     display: flex;
     align-items: center;
     margin-bottom: 24px;
